Tweak build setup to use different prefix
Suits our build system better - install things as

  /opt/gcc-future/bin/pexip-future-$BINARY

--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 
 # Don't conflict with the system compiler
 confflags += --prefix=/opt/gcc-future
+confflags += --program-prefix=pexip-future-
 # We have no interest in multilib
 confflags += --disable-multilib
 # We have no interest in all the other languages
