Build for arm64 too

--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,7 @@ Vcs-Browser: https://github.com/pexip/os-gcc-pex-future/
 Vcs-Git: https://github.com/pexip/os-gcc-pex-future.git
 
 Package: gcc-pex-future
-Architecture: amd64
+Architecture: amd64 arm64
 Depends: ${misc:Depends},
  gcc-multilib,
  lib32stdc++6,
