--- a/debian/control
+++ b/debian/control
@@ -38,8 +38,7 @@ Depends: ${misc:Depends},
  gcc-multilib,
  lib32stdc++6 [amd64],
  libc6,
- libgcc1,
- lib32gcc1 [amd64],
+ libgcc1
 Description: Simple packaged version of a future gcc
  Simple packaged version of a future gcc version to live in
  /opt/gcc-future, ready for us to use with CI in older releases.
